# determinize

./: .gitignore  AGENTS.md  TODO.md  det.sh  run.sh
det/: apply.det  apply.det.dout  apply.det.out  arith.det.dout  arith.det.out  beta.det  beta.det.dout  case-gauss.det  case-gauss.det.dout  case-gauss.det.out  exponential.det  exponential.det.dout  factorial.det  factorial.det.dout  foldr.det  foldr.det.dout  funny.det  funny.det.dout  gamma.det  gamma.det.dout  gauss.det  gauss.det.dout  gauss.det.out  if.det.dout  if.det.out  lambda.det  lambda.det.dout  lambda.det.out  let.det  let.det.dout  let.det.out  lists.det  lists.det.dout  mult.det  mult.det.dout  observe.det  observe.det.dout  pairs.det  pairs.det.dout  pairs.det.out  (+15 more)
examples/: ex.det  ex.det.dout  ex.det.lab  ex.det.state.rew  ex.det.tra  infinite.det  infinite.det.dout  infinite.det.lab  infinite.det.state.rew  infinite.det.tra  simple.det.dout  simple.det.lab  simple.det.state.rew  simple.det.tra  uniform_sum.det  uniform_sum.det.dout  uniform_sum.det.lab  uniform_sum.det.state.rew  uniform_sum.det.tra  while.det  while.det.dout  while.det.lab  while.det.state.rew  while.det.tra
examples/baselines/: clickGraph.det  clickGraph.sgcl
examples/loops/: example.det  (+15 more)
ocaml/: ast.ml  determinize.ml  determinize_main.ml  dune  dune-project  infer.ml  interp.ml  lexer.mll  parser.mly  pretty.ml  to_mc.ml  types.ml
tex/: 1_introduction.tex  2_syntax.tex  3_typing.tex  4_inference.tex  5_determinization.tex  5_soundness.tex  6_soundness.tex  7_related_work.tex  macros.tex  main.tex  references.bib
(+6 files in other folders)
