(library
 (name determinize)
 (wrapped false)
 (modules ast types parser lexer interp infer determinize pretty to_mc)
 (libraries menhirLib))

(menhir
 (modules parser)
 (flags --explain))

(ocamllex (modules lexer))

(executable
 (name determinize_main)
 (modules determinize_main)
 (libraries determinize menhirLib unix))
